# aksharam

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/aksharam/: __init__.py  cli.py  transliterator.py
src/aksharam/data/: malayalam_transliteration.json
tests/: test_transliterator.py
