[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aksharam"
version = "0.1.1"
description = "Transliterate Malayalam text into English-style Manglish with a small set of fixes on top of ml2en"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Ajish K B" }]
keywords = ["malayalam", "transliteration", "manglish", "ml2en", "linguistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["ml2en"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2.0", "twine>=5.0.0"]

[project.urls]
Homepage = "https://github.com/Ajishkbn/aksharam"
Repository = "https://github.com/Ajishkbn/aksharam"
Issues = "https://github.com/Ajishkbn/aksharam/issues"

[project.scripts]
aksharam = "aksharam.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
